confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
  - port: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: app-two

---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
  - port: 8888
