confs/test.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: dddd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil42-playground
  namespace: dddd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil42-playground
  template:
    metadata:
      labels:
        app: wil42-playground
    spec:
      containers:
        - name: playground
          image: "wil42/playground:v2"
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: wil42-service
  namespace: dddd
spec:
  selector:
    app: wil42-playground
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
