confs/ingress2.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: myingress
#   labels:
#     name: myingress


kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: app-two

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
  # - host: app1.com
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: service1
  #           port:
  #             number: 80
  - host: app.humanitics.ai
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-two
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-two
            port:
              number: 80


# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: flask-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# spec:
#   rules:
#   - host: app.humanitics.ai
#     http:
#       paths:
#       backend:
#         serviceName: app-two
#         servicePort: http
